[gd_scene load_steps=3 format=2]

[ext_resource path="res://Shop.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.0823529, 0.0823529, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="Textbox" type="Node2D" parent="."]
visible = false
z_index = 3

[node name="Panel" type="Panel" parent="Textbox"]
margin_left = 4.0
margin_top = 2.0
margin_right = 234.0
margin_bottom = 22.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Textbox/Panel"]
margin_left = 4.0
margin_top = 3.0
margin_right = 450.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Panel1" type="Panel" parent="."]
margin_top = 23.0
margin_right = 240.0
margin_bottom = 48.0

[node name="Item1" type="Button" parent="Panel1"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -98.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Small Health Potion"

[node name="Item2" type="Button" parent="Panel1"]
anchor_right = 1.0
margin_left = 121.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Butterfly Net"

[node name="Item3" type="Button" parent="Panel1"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 13.0
margin_right = -98.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Repel"

[node name="Item4" type="Button" parent="Panel1"]
anchor_right = 1.0
margin_left = 121.0
margin_top = 13.0
margin_right = 21.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Smoke Bomb"

[node name="Label" type="Label" parent="Panel1"]
margin_left = 80.0
margin_top = 4.0
margin_right = 135.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
text = "100 gold"

[node name="Label2" type="Label" parent="Panel1"]
margin_left = 200.0
margin_top = 4.0
margin_right = 255.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
text = "200 gold"

[node name="Label3" type="Label" parent="Panel1"]
margin_left = 80.0
margin_top = 15.0
margin_right = 135.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )
text = "200 gold"

[node name="Label4" type="Label" parent="Panel1"]
margin_left = 200.0
margin_top = 15.0
margin_right = 255.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )
text = "150 gold"

[node name="Panel2" type="Panel" parent="."]
margin_top = 50.0
margin_right = 240.0
margin_bottom = 75.0

[node name="Item1" type="Button" parent="Panel2"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -98.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Med Health Potion"

[node name="Item2" type="Button" parent="Panel2"]
anchor_right = 1.0
margin_left = 121.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Fish Net"

[node name="Item3" type="Button" parent="Panel2"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 13.0
margin_right = -98.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Item4" type="Button" parent="Panel2"]
anchor_right = 1.0
margin_left = 121.0
margin_top = 13.0
margin_right = 21.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="Panel2"]
margin_left = 80.0
margin_top = 4.0
margin_right = 135.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label2" type="Label" parent="Panel2"]
margin_left = 200.0
margin_top = 4.0
margin_right = 255.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label3" type="Label" parent="Panel2"]
margin_left = 80.0
margin_top = 15.0
margin_right = 135.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label4" type="Label" parent="Panel2"]
margin_left = 200.0
margin_top = 15.0
margin_right = 255.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Panel3" type="Panel" parent="."]
margin_top = 77.0
margin_right = 240.0
margin_bottom = 102.0

[node name="Item1" type="Button" parent="Panel3"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -98.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Status Cure"

[node name="Item2" type="Button" parent="Panel3"]
anchor_right = 1.0
margin_left = 121.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Monster Treat"

[node name="Item3" type="Button" parent="Panel3"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 13.0
margin_right = -98.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Super Repel"

[node name="Item4" type="Button" parent="Panel3"]
anchor_right = 1.0
margin_left = 121.0
margin_top = 13.0
margin_right = 21.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="Panel3"]
margin_left = 80.0
margin_top = 4.0
margin_right = 135.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label2" type="Label" parent="Panel3"]
margin_left = 200.0
margin_top = 4.0
margin_right = 255.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label3" type="Label" parent="Panel3"]
margin_left = 80.0
margin_top = 15.0
margin_right = 135.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label4" type="Label" parent="Panel3"]
margin_left = 200.0
margin_top = 15.0
margin_right = 255.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Panel4" type="Panel" parent="."]
margin_top = 104.0
margin_right = 240.0
margin_bottom = 129.0

[node name="Item1" type="Button" parent="Panel4"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -98.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Large Health Potion"

[node name="Item2" type="Button" parent="Panel4"]
anchor_right = 1.0
margin_left = 121.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Elephant Net"

[node name="Item3" type="Button" parent="Panel4"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 13.0
margin_right = -98.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Item4" type="Button" parent="Panel4"]
anchor_right = 1.0
margin_left = 121.0
margin_top = 13.0
margin_right = 21.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="Panel4"]
margin_left = 80.0
margin_top = 4.0
margin_right = 135.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label2" type="Label" parent="Panel4"]
margin_left = 200.0
margin_top = 4.0
margin_right = 255.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label3" type="Label" parent="Panel4"]
margin_left = 80.0
margin_top = 15.0
margin_right = 135.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label4" type="Label" parent="Panel4"]
margin_left = 200.0
margin_top = 15.0
margin_right = 255.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Panel5" type="Panel" parent="."]
margin_top = 131.0
margin_right = 240.0
margin_bottom = 156.0

[node name="Item1" type="Button" parent="Panel5"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -98.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Max Health Potion"

[node name="Item2" type="Button" parent="Panel5"]
anchor_right = 1.0
margin_left = 121.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Item3" type="Button" parent="Panel5"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 13.0
margin_right = -98.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Item4" type="Button" parent="Panel5"]
anchor_right = 1.0
margin_left = 121.0
margin_top = 13.0
margin_right = 21.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="Panel5"]
margin_left = 80.0
margin_top = 4.0
margin_right = 135.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label2" type="Label" parent="Panel5"]
margin_left = 200.0
margin_top = 4.0
margin_right = 255.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label3" type="Label" parent="Panel5"]
margin_left = 80.0
margin_top = 15.0
margin_right = 135.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Label4" type="Label" parent="Panel5"]
margin_left = 200.0
margin_top = 15.0
margin_right = 255.0
margin_bottom = 29.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Money" type="Label" parent="."]
margin_left = 13.0
margin_top = 8.0
margin_right = 82.0
margin_bottom = 22.0
rect_scale = Vector2( 0.75, 0.75 )

[node name="Inventory" type="Button" parent="."]
margin_left = 130.0
margin_top = 5.0
margin_right = 203.0
margin_bottom = 25.0
rect_scale = Vector2( 0.75, 0.75 )
text = "Inventory"

[node name="Back" type="Button" parent="."]
margin_left = 197.0
margin_top = 5.0
margin_right = 239.0
margin_bottom = 25.0
rect_scale = Vector2( 0.75, 0.75 )
text = "Back"
